
[tool.poetry]
name = "timekiller"
version = "0.1"
description = "timekiller"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "timekiller", from = "src" }
]


[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.scripts]
timekiller = "timekiller.timekiller:main"


[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.core.masonry.api"


